bgd/bgd-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: bgd-app
  name: bgd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bgd-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bgd-app
    spec:
      containers:
      - image: quay.io/redhatworkshops/bgd:latest
        name: bgd-app
        resources: {}
---
