bgd/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: bgd-app
  name: bgd-app
  namespace: bgd-app
spec:
  host: ""
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd-app
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
